# microagg1d

./: .coveragerc  .pylintrc  README.md  SpeedComparison.ipynb  setup.cfg  setup.py
src/microagg1d/: __init__.py  cost_maxdist.py  cost_round.py  cost_sae.py  cost_sse.py  main.py
tests/: test_algorithms_maxdist.py  test_algorithms_sse.py  test_generation.py  test_main.py  test_smwak.py
